# ai_browser

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser.rs  commands.rs  db.rs  error.rs  main.rs  storage.rs
src/components/: AddressBar.tsx  AgentPanel.tsx  BookmarkManager.tsx  BookmarksBar.tsx  HistoryViewer.tsx  IllustrationPlaceholder.tsx  ModeToggle.tsx  SettingsPanel.tsx  TabBar.tsx  WebView.tsx
src/lib/utils/: favicon.spec.ts  favicon.ts  index.ts
src/stores/: agentStore.ts  bookmarkStore.ts  browserStore.ts  index.ts  settingsStore.ts
