[package]
name = "aether"
version = "0.1.0"
description = "Aether — Browse lightly. Think deeply."
authors = ["Aether Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database (SQLite)
# Using sqlx for async SQLite support
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }

# CDP (Chrome DevTools Protocol)
# We'll use tungstenite for WebSocket connections to Chrome
tokio-tungstenite = "0.21"
url = "2.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
once_cell = "1.19"
which = "6.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
